--- a/android/src/main/res/layout/activity_my_payments.xml
+++ b/android/src/main/res/layout/activity_my_payments.xml
@@ -13,9 +13,11 @@
         android:visibility="visible" />
     <Button
         android:id="@+id/buttonBack"
+        android:background="#FF5C0A"
         android:layout_marginTop="16dp"
         android:text="@string/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
